--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love running club for runners in Borris, Carlow, Ireland">
-    <meta name="keywords" content="love running, running club, borris, carlow, ireland">
+    <meta name="description" content="Love running club for runners in counties Carlow and Kilkenny, Ireland">
+    <meta name="keywords" content="love running, running club, borris, carlow, kilkenny, south-east, ireland">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
 <body>
-    Hello World!
+    <header>Header Content</header>
+    <section>
+        Hero image
+    </section>
+    <section>
+        Club ethos
+    </section>
+    <section>
+        Running locations, distances, times
+    </section>
+    <footer>social links here</footer>
 </body>
 </html>
