--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <section>
-        Hero image
+        <div id="hero-image"></div>
     </section>
     <section>
         Club ethos
