--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Sunny South-East: <br> ~ Carlow ~ <br> ~ Kilkenny ~ <br> ~ Wexford ~</h3>
+        </div>
+            
     </section>
     <section>
         Club ethos
