--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
     </section>
     <section id="club-ethos">
-        <h1>Why Love Running With Us?</h1>
+        <h1 id="welcome">Why Love Running With Us?</h1>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
@@ -63,7 +63,11 @@
                 <p>Running strengthens your heart by pumping blood more effectively through your body. </p>
             </div>
         </div>
-        <div id="center-about">Centre</div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
+        </div>
     </section>
     <section>
         Running locations, distances, times
