Add social media links and icons to footer

--- a/index.html
+++ b/index.html
@@ -106,7 +106,22 @@
             <h3>11:30</h3>
         </div>
     </section>
-    <footer>social links here</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com" target="_blank" rel="no_opener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com" target="_blank" rel="no_opener" aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com" target="_blank" rel="no_opener" aria-label="Visit our youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com" target="_blank" rel="no_opener" aria-label="Visit our instagrampage (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
     <!--Font Awesome script-->
     <script src="https://kit.fontawesome.com/5e18edb7af.js" crossorigin="anonymous"></script>
 </body>
