Add style to footer social media icons

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com" target="_blank" rel="no_opener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
